<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".NumberVerify" >

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="6dip"
                android:contentDescription="@string/logo"
                android:src="@drawable/aps" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/EnterNum"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp" >

            <EditText
                android:id="@+id/phonrNumberEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mobileNum"
                android:inputType="phone" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp" >

            <Button
                android:id="@+id/validateNumberBtn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/Send" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow14"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp" >

            <TextView
                android:id="@+id/validateReportNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="true" />
        </TableRow>
    </TableLayout>

</ScrollView>